--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 			}
 		],
 		"configuration":{
-			"title": "Translation Variable",
+			"title": "Selection Translation",
 			"properties": {
 				"selection-translation.GAS setting":{
 					"type" : "string",
